# OpsETL

./: .gitignore  check_cols.py  pyproject.toml  requirements.txt  run_ops.py
.github/workflows/: db-ci-cd.yml
OpsETL.Database/: OpsETL.Database.sqlproj
exports/: people.csv  people_rejects.csv  people_rejects.jsonl  people_rejects_top1.csv  people_rejects_top1.jsonl
src/app/: config.py  db.py  migrations.py  ops_cli.py  people_repo.py  raw_repo.py  rejects_repo.py  sql_utils.py  stage_repo.py  table_tools.py  transform_framework.py  transform_schema.py  typecast.py
src/app/datasets/: people_spec.py
src/app/exporters/: people_exporter.py  rejects_exporter.py
src/app/importers/: people_importer.py
src/app/loaders/: csv_loader.py
src/app/migrations/: 001_create_schema_migrations.sql  002_create_hello.sql  003_create_raw_tables.sql  004_insert_seed_raw.sql  005_create_people.sql  007_create_people_typed.sql  008_create_dataset_rejects.sql  runner.py
src/app/promoters/: people_promoter.py
src/app/specs/: people_spec.py
